# multimodal-video-search

./: .gitignore  .upload_state.json  COLAB_PIPELINE.md  Makefile  README.md  metadat.txt  pyproject.toml  requirements.txt  scratch_logs.py  scratch_qdrant_test.py  scratch_test_hf.py  test_bge.py  test_gemini.py  test_gemini_api.py  test_regex.py  test_regex2.py  test_search.py
cloud-backend/: Makefile  package-lock.json  wrapper.yaml
cloud-backend/templates/: template.yaml
data_pipeline/: HOW_TO_RUN_PIPELINE.md  __init__.py  chunker.py  downloader.py  dynamo_uploader.py  main.py  manager.py  marathi_to_english_dict.json  pipeline.py  qdrant_uploader.py  transcriber.py  transcript_processor.py  video_enricher.py
data_pipeline/enriched_json/: 9RAqjOZEOh4_enriched.json  BewB6S4JYqo_enriched.json  DdBv99-IWi0_enriched.json  Y4D15z9Z9nU_enriched.json  bb6ip0m6_CA_enriched.json
data_pipeline/enriched_metadata/: -eOhb2PxUW4_meta.json  -er4x71IK_4_meta.json  0FxiqJyPi40_meta.json  0Nx64EOI0m4_meta.json  0qX8Rj0lvpk_meta.json  1b95-HY10SQ_meta.json  1jwAJp8q5xo_meta.json  (+131 more)
docs/: 01-data-pipeline.md  02-chunking-strategy.md
frontend/: index.html  package-lock.json  package.json
scripts/: add_english_meta.py  aws_helper.py  build_bm25_index.py  clean_musical_segments.py  cleanup.sh  dynamo_extractor.py  embed_queries.py  get_metadat.py  metadat.txt  migrate_to_hybrid.py  normalize_saints.py  package_release.py  packaging.py  playlist_scrapper.py  re_resolve_timestamps.py  rebuild_qdrant_hybrid.py  test_gemini.py  test_hybrid_search.py  upload_dynamo.py  video_enrich.py
(+146 files in other folders)
