[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pethe-kaka-pipeline"
version = "1.0.0"
description = "Data ingestion pipeline for Pethe Kaka Knowledge Portal"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api",
    "langchain>=1.3.1",
    "langchain-text-splitters>=1.1.2",
    "langchain-core>=1.4.0",
    "google-genai>=1.66.0,<2.0.0",
    "qdrant-client>=1.18.0",
    "python-dotenv",
    "tenacity",
    "boto3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_pipeline*"]
